==> dimafe6/I2CSensor/src/BME280.cpp <==
#include "BME280.h"

bool BME280::begin(uint8_t address, SensorCalibration *calib)
{
	I2CAddress = address;
	calibration = calib;

	Wire.begin();

	//Check communication with IC before anything else
	uint8_t chipID = readRegister(BME280_CHIP_ID_REG); //Should return 0x60 or 0x58
	if (chipID != 0x58 && chipID != 0x60)			   // Is this BMP or BME?
	{
		return false; //This is not BMP nor BME!
	}

	if (!calib->calibrated)
	{
		//Reading all compensation data, range 0x88:A1, 0xE1:E7
		calibration->dig_T1 = ((uint16_t)((readRegister(BME280_DIG_T1_MSB_REG) << 8) + readRegister(BME280_DIG_T1_LSB_REG)));
		calibration->dig_T2 = ((int16_t)((readRegister(BME280_DIG_T2_MSB_REG) << 8) + readRegister(BME280_DIG_T2_LSB_REG)));
		calibration->dig_T3 = ((int16_t)((readRegister(BME280_DIG_T3_MSB_REG) << 8) + readRegister(BME280_DIG_T3_LSB_REG)));

		calibration->dig_P1 = ((uint16_t)((readRegister(BME280_DIG_P1_MSB_REG) << 8) + readRegister(BME280_DIG_P1_LSB_REG)));
		calibration->dig_P2 = ((int16_t)((readRegister(BME280_DIG_P2_MSB_REG) << 8) + readRegister(BME280_DIG_P2_LSB_REG)));
		calibration->dig_P3 = ((int16_t)((readRegister(BME280_DIG_P3_MSB_REG) << 8) + readRegister(BME280_DIG_P3_LSB_REG)));
		calibration->dig_P4 = ((int16_t)((readRegister(BME280_DIG_P4_MSB_REG) << 8) + readRegister(BME280_DIG_P4_LSB_REG)));
		calibration->dig_P5 = ((int16_t)((readRegister(BME280_DIG_P5_MSB_REG) << 8) + readRegister(BME280_DIG_P5_LSB_REG)));
		calibration->dig_P6 = ((int16_t)((readRegister(BME280_DIG_P6_MSB_REG) << 8) + readRegister(BME280_DIG_P6_LSB_REG)));
		calibration->dig_P7 = ((int16_t)((readRegister(BME280_DIG_P7_MSB_REG) << 8) + readRegister(BME280_DIG_P7_LSB_REG)));
		calibration->dig_P8 = ((int16_t)((readRegister(BME280_DIG_P8_MSB_REG) << 8) + readRegister(BME280_DIG_P8_LSB_REG)));
		calibration->dig_P9 = ((int16_t)((readRegister(BME280_DIG_P9_MSB_REG) << 8) + readRegister(BME280_DIG_P9_LSB_REG)));

		calibration->dig_H1 = ((uint8_t)(readRegister(BME280_DIG_H1_REG)));
		calibration->dig_H2 = ((int16_t)((readRegister(BME280_DIG_H2_MSB_REG) << 8) + readRegister(BME280_DIG_H2_LSB_REG)));
		calibration->dig_H3 = ((uint8_t)(readRegister(BME280_DIG_H3_REG)));
		calibration->dig_H4 = ((int16_t)((readRegister(BME280_DIG_H4_MSB_REG) << 4) + (readRegister(BME280_DIG_H4_LSB_REG) & 0x0F)));
		calibration->dig_H5 = ((int16_t)((readRegister(BME280_DIG_H5_MSB_REG) << 4) + ((readRegister(BME280_DIG_H4_LSB_REG) >> 4) & 0x0F)));
		calibration->dig_H6 = ((int8_t)readRegister(BME280_DIG_H6_REG));

		calibration->calibrated = true;
	}

	setMode(MODE_SLEEP);

	return true;
}

void BME280::readRegisterRegion(uint8_t *outputPointer, uint8_t offset, uint8_t length)
{
	//define pointer that will point to the external space
	uint8_t i = 0;
	char c = 0;

	Wire.beginTransmission(I2CAddress);
	Wire.write(offset);
	Wire.endTransmission();

	// request bytes from slave device
	Wire.requestFrom(I2CAddress, length);
	while ((Wire.available()) && (i < length)) // slave may send less than requested
	{
		c = Wire.read(); // receive a byte as character
		*outputPointer = c;
		outputPointer++;
		i++;
	}
}

void BME280::writeRegister(uint8_t offset, uint8_t dataToWrite)
{
	Wire.beginTransmission(I2CAddress);
	Wire.write(offset);
	Wire.write(dataToWrite);
	Wire.endTransmission();
}
